--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,7 @@
   margin: 32pt auto 0 auto;
 }
 
-button {
-  border-radius: 4pt;
-  background-color: #008080;
-  border: none;
-  color: white;
-  margin: 8pt;
-  padding: 4pt 8pt;
-}
 
-button:hover {
-  background-color: #009494;
-}
 
 input {
   border-radius: 4pt;
@@ -72,3 +61,45 @@ h5 {
   color:  #464646;
   margin: 0;
 }
+
+button {
+  border-radius: 4pt;
+  background-color: #008080;
+  border: none;
+  color: white;
+  margin: 8pt;
+  padding: 4pt 8pt;
+}
+
+button:hover {
+  background-color: #009494;
+}
+
+#SectionSelection {
+    display: block;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: #444;
+    line-height: 1.3;
+    padding: .6em 1.4em .5em .8em;
+    margin: 0;
+    border-radius: .5em;
+  }
+  /*
+  .select-css::-ms-expand {
+    display: none;
+  }
+  .select-css:hover {
+    border-color: #888;
+  }
+  .select-css:focus {
+    border-color: #aaa;
+    box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+    box-shadow: 0 0 0 3px -moz-mac-focusring;
+    color: #222;
+    outline: none;
+  }
+  .select-css option {
+    font-weight:normal;
+  }*/
