--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
-.App {
+.main {
   text-align: center;
   max-width: 700pt;
   margin: 32pt auto 0 auto;
 }
-
-
 
 input {
   border-radius: 4pt;
@@ -62,12 +60,19 @@ h5 {
   margin: 0;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  justify-content: center;
+
+}
+
 button {
   border-radius: 4pt;
   background-color: #008080;
   border: none;
   color: white;
-  margin: 8pt;
   padding: 4pt 8pt;
 }
 
@@ -76,16 +81,12 @@ button:hover {
 }
 
 #SectionSelection {
-    display: block;
-    font-size: 16px;
-    font-family: sans-serif;
-    font-weight: 700;
-    color: #444;
-    line-height: 1.3;
-    padding: .6em 1.4em .5em .8em;
-    margin: 0;
-    border-radius: .5em;
+    border-radius: 4pt;
+    padding: 4pt 8pt;
+    width: 130pt;
+    border: 1px solid rgb(204, 204, 204);
   }
+
   /*
   .select-css::-ms-expand {
     display: none;
